2012-10-27 Dominik Reichardt <dominus@users.sourceforge.net>
	* gumps/Slider_gump.cc: fixed bug #2801339, clicks outside of the slider gump 
	  but on the x-axis of the slider were registered as clicks on the slider.
	* exult.cc: when scale_method in exult.cfg wasn't a valid scaler Exult would crash.
	  Thanks to sh4rm4 on #exult for this fix.

2012-10-10 Dominik Reichardt <dominus@users.sourceforge.net>
	* objs/egg.cc: fixed bug #3433026, in a fire field only clear asleep flag 
	  when the NPC is actually sleeping. Otherwise we get a cloned passive 
	  standing NPC. This is due to Usecode_script::terminate(this); in actors.cc
	  which might need further looking into.
	  
2012-09-07	Malignant Manor <malignantmanor@users.sourceforge.net>
	* Revert previous change and implement it another way

2012-08-25	Malignant Manor <malignantmanor@users.sourceforge.net>
	* Add 0x160 mask to find_nearby. This will only return objects that are not
		okay to take. Make baking schedule use this mask instead of a quality
		setting since quality isn't saved on quality flags objects.

2012-08-18 Dominik Reichardt <dominus@users.sourceforge.net>
	* configure.ac, makefile.am: added configure "--with-macosx-code-signature=identity"
	  for using an ID to codesign the Mac OS X bundle. The default identity is
	  "Developer ID Application".
	  
2012-07-06	Malignant Manor <malignantmanor@users.sourceforge.net>
	* actors.cc: Have party members fight back if Avatar is disabled,
		not in combat mode, and a party member is hit. The original only
		switched to combat mode when the Avatar got hit.
		Fix use of || instead of && that has any actor schedule seek foes
	* gumps/Spellbook_gump.cc: fix character size
	* usecode/ucinternal.cc: fix array size

2012-06-15	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* all: Updating Gnome shp thumbnailer to work on Gnome 3.

2012-06-12	 Malignant Manor <malignantmanor@users.sourceforge.net>
	* mapedit/shapeedit.cc: Fix spot frame editing for helmet