@@ -3,6 +3,9 @@
 	  but on the x-axis of the slider were registered as clicks on the slider.
 	* exult.cc: when scale_method in exult.cfg wasn't a valid scaler Exult would crash.
 	  Thanks to sh4rm4 on #exult for this fix.
+	* exult.cc, gamewin.*, gumps/GameplayOptions_gump.cc: added single rightclick 
+	  pathfind option. Default is still a double rightclick. Thanks to wjp for 
+	  debugging this.
 
 2012-10-10 Dominik Reichardt <dominus@users.sourceforge.net>
 	* objs/egg.cc: fixed bug #3433026, in a fire field only clear asleep flag 
